--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,14 +11,19 @@
     "128": "icon-128.png"
   },
   "permissions": [
-    "http://app.answerminer.com/*",
-    "https://app.answerminer.com/*"
+    "http://*/*",
+    "https://*/*",
+    "storage", "declarativeContent"
   ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": [
-        "https://app.answerminer.com/*",
-        "http://app.answerminer.com/*"
+        "http://*/*",
+        "https://*/*"
       ],
       "js": [
         "content.js"
@@ -26,5 +31,15 @@
       "run_at": "document_idle"
     }
   ],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon-16.png",
+      "32": "icon-32.png",
+      "48": "icon-32.png",
+      "64": "icon-64.png",
+      "128": "icon-128.png"
+    }
+  },
   "manifest_version": 2
 }
