--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,10 +13,13 @@
   "permissions": [
     "http://*/*",
     "https://*/*",
-    "storage", "declarativeContent"
+    "storage",
+    "declarativeContent"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
   "content_scripts": [
@@ -41,5 +44,6 @@
       "128": "icon-128.png"
     }
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
